newly modified from cas 3-11-13

--- a/views/option.jade
+++ b/views/option.jade
@@ -6,7 +6,7 @@ block content
 			.header
 		.gender-container
 			.choose-gender-box
-				form(method='post', action='/v1/chat')
+				form(method='post', action='/chat')
 					button#but-male.male(type='button')
 						input(type='radio', id='gender-m', name='gender-m', value='male', hidden='true')
 					button#but-female.female(type='button')
