--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,10 +28,19 @@ body.chat-page {
     background-repeat: no-repeat;
     background-size: 100% 110%;
 }
+body.ranking-page {
+	  margin:0 0 0 0;
+    background-attachment: fixed;
+    background-clip: border-box;
+    background-color: transparent;
+    background-image: url("/img/hc-theme/ranking-bg.png");
+    background-origin: padding-box;
+    background-repeat: no-repeat;
+    background-size: 100% 110%;
+}
 .header-wrapper {
   background: url("/img/hc-theme/header-line.png") repeat-x scroll 0 -30px transparent;
   background-size: contain;
-  
   height: 150px;
   width: 100%;
 }
@@ -46,7 +55,6 @@ body.chat-page {
     background-repeat: no-repeat;
     background-size: contain;
     height: 150px;
-
 }
 
  .header-wrapper .user-header { 
@@ -248,6 +256,18 @@ body.chat-page {
 	height: 400px;
 }
 
+.ranking-container {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.ranking-container .ranking-selection-box {
+	background: url("/img/hc-theme/score-sheet.png") no-repeat scroll 51.5% 35px transparent;
+	background-size: -moz-calc();
+	height: 400px;	
+}
 
 .gender-container {
   width: 100%;
@@ -259,8 +279,7 @@ body.chat-page {
 .gender-container .choose-gender-box {
 	background: url("/img/hc-theme/gender-box.png") no-repeat scroll 51.5% 35px transparent;
 	background-size: -moz-calc();
-	height: 400px;
-	
+	height: 400px;	
 }
 
 .gender-container .choose-gender-box input {
