--- a/views/ranking.jade
+++ b/views/ranking.jade
@@ -8,20 +8,22 @@ block content
 				h2 Hi
 		.ranking-container
 			.ranking-selection-box
-				form
-					button#score.good(type='button')
-						input(type='checkbox', id='g-score', name='g-score', value='good', hidden='true')
-				
+				#r1.rate_widget
+					.chick_1.ratings_chick
+					.chick_2.ratings_chick
+					.chick_3.ratings_chick
+					.chick_4.ratings_chick
+					.chick_5.ratings_chick
+					.total_votes
 		include footer
 		script
-			$('#score').click(function(ev) {
-				$('#score').not(this).css('background-position', '-128px 0').removeClass('s');
-				if(!$(this).is('.s')){
-					$(this).css('background-position', '1px 0').addClass('s');
-					$('#g-score').attr("checked", true);
-				}
-				else{
-					$('#g-score').attr("checked", false);
-					$(this).css('background-position', '-30px 0').removeClass('s');
-				}
-			});
+			$('.ratings_chick').hover(
+					function() {  
+						$(this).prevAll().andSelf().addClass('ratings_over');  
+						$(this).nextAll().removeClass('ratings_vote');   
+					},
+					function() {  
+						$(this).prevAll().andSelf().removeClass('ratings_over');  
+						set_votes($(this).parent());  
+					}  
+				);
